--- a/CODE/ETL.ipynb
+++ b/CODE/ETL.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,8 @@
     "import pandas as pd\n",
     "import re\n",
     "import ast\n",
-    "from textblob import TextBlob"
+    "from textblob import TextBlob\n",
+    "import requests"
    ]
   },
   {
