--- a/CODE/funciones.ipynb
+++ b/CODE/funciones.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,33 @@
     "import pandas as pd\n",
     "import re\n",
     "import ast\n",
-    "from textblob import TextBlob"
+    "import requests\n",
+    "from textblob import TextBlob\n",
+    "from io import BytesIO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''URL a los datos en Github '''\n",
+    "horas_jugadas_parquet = 'https://github.com/rcarmonae/HENRY_PI01_RCARMONA_MAYO2024/raw/main/DATASETS/F01_PlaytimeGenre.parquet'\n",
+    "horas_jugadas_usuario_parquet = 'https://github.com/rcarmonae/HENRY_PI01_RCARMONA_MAYO2024/raw/main/DATASETS/F02_UserForGenre.parquet'\n",
+    "game_reviews_parquet = 'https://github.com/rcarmonae/HENRY_PI01_RCARMONA_MAYO2024/raw/main/DATASETS/F03_UsersRecommend.parquet'\n",
+    "\n",
+    "\n",
+    "'''Solicita el contenido de las URL'''\n",
+    "res_horas_jugadas = requests.get(horas_jugadas_parquet)\n",
+    "res_horas_jugadas_usuario = requests.get(horas_jugadas_usuario_parquet)\n",
+    "res_game_reviews = requests.get(game_reviews_parquet)\n",
+    "\n",
+    "\n",
+    "'''Convierte los csv a dataframe'''\n",
+    "horas_jugadas = pd.read_parquet(BytesIO(res_horas_jugadas.content))\n",
+    "horas_jugadas_usuario = pd.read_parquet(BytesIO(res_horas_jugadas_usuario.content))\n",
+    "game_reviews = pd.read_parquet(BytesIO(res_game_reviews.content))"
    ]
   },
   {
