Actualiza requirements.txt

--- a/CODE/funciones.ipynb
+++ b/CODE/funciones.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
    "source": [
     "'''FUNCIÓN 1: PlaytimeGenre'''\n",
     "### lee la base de datos necesaria\n",
-    "horas_jugadas = pd.read_parquet(r'G:\\My Drive\\HENRY\\PROYECTO_INDIVIDUAL_I\\PI01-ABRIL2024\\DATASET\\F01_PlaytimeGenre.parquet')\n",
+    "#horas_jugadas = pd.read_parquet(r'G:\\My Drive\\HENRY\\PROYECTO_INDIVIDUAL_I\\PI01-ABRIL2024\\DATASET\\F01_PlaytimeGenre.parquet')\n",
     "\n",
     "genre = 'RPG'\n",
     "# MODIFICAR ESTO PARA QUE LLAME AL ARGUMENTO DE LA FUNCIÓN  - Filtrar por un género específico, digamos RPG\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
    "source": [
     "'''FUNCIÓN 2: UserForGenre'''\n",
     "### lee la base de datos necesaria\n",
-    "horas_jugadas_usuario = pd.read_parquet(r'G:\\My Drive\\HENRY\\PROYECTO_INDIVIDUAL_I\\PI01-ABRIL2024\\DATASET\\F02_UserForGenre.parquet')\n",
+    "#horas_jugadas_usuario = pd.read_parquet(r'G:\\My Drive\\HENRY\\PROYECTO_INDIVIDUAL_I\\PI01-ABRIL2024\\DATASET\\F02_UserForGenre.parquet')\n",
     "\n",
     "genre = 'RPG'\n",
     "\n",
