Actualiza parquets, ETL y main.py

--- a/CODE/ETL.ipynb
+++ b/CODE/ETL.ipynb
@@ -300,12 +300,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.1 Crea el PARQUET que servirá para la función 1: PlaytimeGenre"
+    "#### 2.1 Crea el PARQUET que servirá para la función 1: PlaytimeGenre\n",
+    "NOTA: La base de datos que se genera a partir de los datos orginales posee un total de 9,993,947 de filas. Por lo tanto, se tomó la decisión de crear una muestra aleatoria con el 1% de los datos con el fin de prevenir problemas relacionados con el uso de memoria. De esta  manera  se logra probar  la correcta ejecución de funciones y deploy. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,6 +358,8 @@
     "# por separado cada género. Se deja fuera la etiqueta de Early Access pues no se considera un género.\n",
     "horas_jugadas = horas_jugadas.explode('genres')\n",
     "\n",
+    "# Genera una muestra aleatoria con el \n",
+    "horas_jugadas = horas_jugadas.sample(frac = 0.01, random_state=42)\n",
     "###------Crea el CSV que servirá para la función 1: PlaytimeGenre-----\n",
     "#horas_jugadas.to_csv(r'G:\\My Drive\\HENRY\\PROYECTO_INDIVIDUAL_I\\PI01-ABRIL2024\\DATASET\\F01_PlaytimeGenre.csv', index=False)\n",
     "\n",
@@ -368,12 +371,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.2 Crea el PARQUET que servirá para la función 2: UserForGenre"
+    "#### 2.2 Crea el PARQUET que servirá para la función 2: UserForGenre\n",
+    " NOTA: La base de datos que se genera a partir de los datos orginales posee un total de 9,993,947 de filas. Por lo tanto, se tomó la decisión de crear una muestra aleatoria con el 1% de los datos con el fin de prevenir problemas relacionados con el uso de memoria. De esta  manera  se logra probar  la correcta ejecución de funciones y deploy. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,6 +403,8 @@
     "# Cada videojuego puede tener varias categorías  de  género, por lo cual, se expande este campo para contabilizar \n",
     "# por separado cada género. Se deja fuera la etiqueta de Early Access pues no se considera un género.\n",
     "horas_jugadas_usuario = horas_jugadas_usuario.explode('genres')\n",
+    "\n",
+    "horas_jugadas_usuario = horas_jugadas_usuario.sample(frac = 0.01, random_state=42)\n",
     "\n",
     "###-----Crea el CSV que servirá para la función 2: UserForGenre----\n",
     "#horas_jugadas_usuario.to_csv(r'G:\\My Drive\\HENRY\\PROYECTO_INDIVIDUAL_I\\PI01-ABRIL2024\\DATASET\\F02_UserForGenre.csv', index=False)\n",
