Actualiza main.py y parquet F03

--- a/CODE/ETL.ipynb
+++ b/CODE/ETL.ipynb
@@ -417,12 +417,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.3 Crea el PARQUET que servirá para la función 3: UsersRecommend"
+    "#### 2.3 Crea el PARQUET que servirá para la funciones 3: UsersRecommend y 4: recomendacion_juego"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +475,7 @@
     "\n",
     "# JOIN con el DF steam_games\n",
     "# Hacer un join  con las df raw_utiems y raw_games, pero solo conserva las columnas estrictamente necesarias\n",
-    "game_reviews = pd.merge(sentiment_function[['user_id','item_id','sentiment_analysis','recommend']], raw_games_csv_clean[['id', 'release_date', 'title', 'developer']], left_on='item_id', right_on='id', how='inner')\n",
+    "game_reviews = pd.merge(sentiment_function[['user_id','item_id','sentiment_analysis','recommend']], raw_games_csv_clean[['id', 'release_date', 'title', 'developer','genres']], left_on='item_id', right_on='id', how='inner')\n",
     "# Convertir 'release_date' a formato de fecha (datetime)\n",
     "game_reviews['release_date'] = pd.to_datetime(game_reviews['release_date'],errors='coerce')\n",
     "# Crea una nueva columna que solo contiene el año\n",
