--- a/CODE/funciones.ipynb
+++ b/CODE/funciones.ipynb
@@ -13,7 +13,9 @@
     "import ast\n",
     "import requests\n",
     "from textblob import TextBlob\n",
-    "from io import BytesIO"
+    "from io import BytesIO\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from sklearn.preprocessing import MultiLabelBinarizer"
    ]
   },
   {
@@ -168,6 +170,87 @@
     "# Obtener el top 3 de juegos recomendados para el año 2021\n",
     "top_games_1995 = top_recommended_games(1996)\n",
     "print(top_games_1995)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         sentiment_analysis  recommend  release_year  similarity_score\n",
+      "item_id                                                               \n",
+      "9480                      2       True        2009.0               1.0\n",
+      "20500                     2       True        2009.0               1.0\n",
+      "21660                     2       True        2009.0               1.0\n",
+      "35420                     2       True        2009.0               1.0\n",
+      "300                       2       True        2010.0               1.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\occar\\AppData\\Local\\Temp\\ipykernel_33652\\2478314285.py:29: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  features = features[~df['item_id'].duplicated(keep='first')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Supongamos que 'df' es el DataFrame global que contiene la información de los juegos\n",
+    "df = pd.read_parquet(r'G:\\My Drive\\HENRY\\PROYECTO_INDIVIDUAL_I\\PI01-ABRIL2024\\DATASET\\F03_UsersRecommend.parquet')\n",
+    "df['item_id'] = df['item_id'].astype(int)\n",
+    "\n",
+    "def recommend_games(item_id):\n",
+    "    global df  # Utiliza el DataFrame global\n",
+    "\n",
+    "    # Asegúrate de que los géneros estén correctamente formateados como listas\n",
+    "    if isinstance(df.loc[0, 'genres'], str):\n",
+    "        df['genres'] = df['genres'].apply(eval)\n",
+    "\n",
+    "    try:\n",
+    "        game_info = df[df['item_id'] == item_id].iloc[0]\n",
+    "    except IndexError:\n",
+    "        return \"No se encontró el juego con el item_id proporcionado.\"\n",
+    "\n",
+    "    mlb = MultiLabelBinarizer()\n",
+    "    genre_encoded = mlb.fit_transform(df['genres'])\n",
+    "    genre_df = pd.DataFrame(genre_encoded, columns=mlb.classes_, index=df.index)\n",
+    "\n",
+    "    features = pd.concat([df[['sentiment_analysis', 'recommend', 'release_year']], genre_df], axis=1)\n",
+    "    features.dropna(inplace=True)\n",
+    "\n",
+    "    # Eliminar duplicados para asegurar que cada juego es único\n",
+    "    features = features[~df['item_id'].duplicated(keep='first')]\n",
+    "\n",
+    "    # Almacenar los índices antes de eliminar el juego dado para posterior referencia\n",
+    "    valid_indices = features.index\n",
+    "\n",
+    "    target_features = features.loc[df['item_id'] == item_id]\n",
+    "    features = features.drop(index=target_features.index)\n",
+    "\n",
+    "    # Calcular la similitud del coseno entre el juego dado y todos los otros juegos\n",
+    "    cosine_sim = cosine_similarity(features, target_features)\n",
+    "\n",
+    "    # Asignar los puntajes de similitud al DataFrame que solo contiene los índices válidos\n",
+    "    valid_df = df.loc[valid_indices].drop(index=target_features.index)\n",
+    "    valid_df['similarity_score'] = cosine_sim[:, 0]\n",
+    "\n",
+    "    # Asegurar que las recomendaciones sean juegos únicos\n",
+    "    valid_df = valid_df.groupby('item_id').max('similarity_score')\n",
+    "\n",
+    "    return valid_df.nlargest(5, 'similarity_score')\n",
+    "\n",
+    "# Suponiendo que df es tu DataFrame ya definido y quieres recomendar juegos basados en un item_id específico\n",
+    "item_id = 1250  # Asegúrate de usar un item_id válido\n",
+    "recommended_games = recommend_games(item_id)\n",
+    "print(recommended_games)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
