Actualiza main.py

--- a/CODE/funciones.ipynb
+++ b/CODE/funciones.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -194,14 +194,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\occar\\AppData\\Local\\Temp\\ipykernel_33652\\2478314285.py:29: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\occar\\AppData\\Local\\Temp\\ipykernel_33652\\3671925802.py:25: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  features = features[~df['item_id'].duplicated(keep='first')]\n"
      ]
     }
    ],
    "source": [
     "# Supongamos que 'df' es el DataFrame global que contiene la información de los juegos\n",
-    "df = pd.read_parquet(r'G:\\My Drive\\HENRY\\PROYECTO_INDIVIDUAL_I\\PI01-ABRIL2024\\DATASET\\F03_UsersRecommend.parquet')\n",
+    "df = pd.read_parquet(r'G:\\My Drive\\HENRY\\PROYECTO_INDIVIDUAL_I\\PI01-ABRIL2024\\PARA_GITHUB\\DATASETS\\F03_UsersRecommend.parquet')\n",
     "df['item_id'] = df['item_id'].astype(int)\n",
     "\n",
     "def recommend_games(item_id):\n",
