Actualiza main.py

--- a/CODE/funciones.ipynb
+++ b/CODE/funciones.ipynb
@@ -174,28 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         sentiment_analysis  recommend  release_year  similarity_score\n",
-      "item_id                                                               \n",
-      "9480                      2       True        2009.0               1.0\n",
-      "20500                     2       True        2009.0               1.0\n",
-      "21660                     2       True        2009.0               1.0\n",
-      "35420                     2       True        2009.0               1.0\n",
-      "300                       2       True        2010.0               1.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\occar\\AppData\\Local\\Temp\\ipykernel_33652\\3671925802.py:25: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  features = features[~df['item_id'].duplicated(keep='first')]\n"
+      "{'Los ID de los videojuegos reocmendados son: [1280, 1200, 1510, 1520, 1670]'}\n"
      ]
     }
    ],
@@ -211,6 +197,8 @@
     "    if isinstance(df.loc[0, 'genres'], str):\n",
     "        df['genres'] = df['genres'].apply(eval)\n",
     "\n",
+    "    #print(\"Columnas en df antes de cualquier operación:\", df.columns)\n",
+    "\n",
     "    try:\n",
     "        game_info = df[df['item_id'] == item_id].iloc[0]\n",
     "    except IndexError:\n",
@@ -220,16 +208,20 @@
     "    genre_encoded = mlb.fit_transform(df['genres'])\n",
     "    genre_df = pd.DataFrame(genre_encoded, columns=mlb.classes_, index=df.index)\n",
     "\n",
-    "    features = pd.concat([df[['sentiment_analysis', 'recommend', 'release_year']], genre_df], axis=1)\n",
+    "    features = pd.concat([df[['item_id', 'sentiment_analysis', 'recommend', 'release_year']], genre_df], axis=1)\n",
     "    features.dropna(inplace=True)\n",
     "\n",
+    "    #print(\"Columnas en features después de crearlo:\", features.columns)\n",
+    "\n",
     "    # Eliminar duplicados para asegurar que cada juego es único\n",
-    "    features = features[~df['item_id'].duplicated(keep='first')]\n",
+    "    features = features[~features['item_id'].duplicated(keep='first')]\n",
+    "\n",
+    "    #print(\"Columnas en features después de eliminar duplicados:\", features.columns)\n",
     "\n",
     "    # Almacenar los índices antes de eliminar el juego dado para posterior referencia\n",
     "    valid_indices = features.index\n",
     "\n",
-    "    target_features = features.loc[df['item_id'] == item_id]\n",
+    "    target_features = features.loc[features['item_id'] == item_id]\n",
     "    features = features.drop(index=target_features.index)\n",
     "\n",
     "    # Calcular la similitud del coseno entre el juego dado y todos los otros juegos\n",
@@ -242,14 +234,16 @@
     "    # Asegurar que las recomendaciones sean juegos únicos\n",
     "    valid_df = valid_df.groupby('item_id').max('similarity_score')\n",
     "\n",
-    "    return valid_df.nlargest(5, 'similarity_score')\n",
+    "    # Ordenar y seleccionar los top 5 juegos más similares\n",
+    "    top_games = valid_df.nlargest(5, 'similarity_score')\n",
+    "\n",
+    "    # Devolver solo los item_id de los juegos recomendados como una lista\n",
+    "    return {f\"Los ID de los videojuegos reocmendados son: {top_games.index.tolist()}\"}\n",
     "\n",
     "# Suponiendo que df es tu DataFrame ya definido y quieres recomendar juegos basados en un item_id específico\n",
     "item_id = 1250  # Asegúrate de usar un item_id válido\n",
     "recommended_games = recommend_games(item_id)\n",
     "print(recommended_games)\n",
-    "\n",
-    "\n",
     "\n"
    ]
   }
