Actualiza main.py

--- a/CODE/funciones.ipynb
+++ b/CODE/funciones.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -187,11 +187,16 @@
    ],
    "source": [
     "# Supongamos que 'df' es el DataFrame global que contiene la información de los juegos\n",
-    "df = pd.read_parquet(r'G:\\My Drive\\HENRY\\PROYECTO_INDIVIDUAL_I\\PI01-ABRIL2024\\PARA_GITHUB\\DATASETS\\F03_UsersRecommend.parquet')\n",
+    "#df = pd.read_parquet(r'G:\\My Drive\\HENRY\\PROYECTO_INDIVIDUAL_I\\PI01-ABRIL2024\\PARA_GITHUB\\DATASETS\\F03_UsersRecommend.parquet')\n",
+    "#df['item_id'] = df['item_id'].astype(int)\n",
+    "\n",
+    "game_reviews_parquet = 'https://github.com/rcarmonae/HENRY_PI01_RCARMONA_MAYO2024/raw/main/DATASETS/F03_UsersRecommend.parquet'\n",
+    "res_game_reviews = requests.get(game_reviews_parquet)\n",
+    "df = pd.read_parquet(BytesIO(res_game_reviews.content))\n",
     "df['item_id'] = df['item_id'].astype(int)\n",
     "\n",
     "def recommend_games(item_id):\n",
-    "    global df  # Utiliza el DataFrame global\n",
+    "    #global df  # Utiliza el DataFrame global\n",
     "\n",
     "    # Asegúrate de que los géneros estén correctamente formateados como listas\n",
     "    if isinstance(df.loc[0, 'genres'], str):\n",
